<resources>
	<string name="app_name">Creative Vues</string>
	<string name="join_now">Join Now</string>
	<string name="join_today">Join Today</string>
	<string name="post">Post</string>
	<string name="avatar_desc">Avatar of logged user</string>
	<string name="check_the_latest_thoughts">Check the Latest Thoughts</string>
	<string name="avatar">avatar</string>
	<string name="default_comments">0 comments</string>
	<string name="likes_icon">likes_icon</string>
	<string name="your_posts">Your posts</string>
	<string name="logout">Logout</string>
	<string name="no_posts">You have no posts yet. Start making one :)</string>
	<string name="post_title">What\'s on your mind today ?</string>
	<string name="tell_us">Tell us!</string>
	<string name="submit">Submit</string>
	<string name="delete_icon">delete icon</string>
</resources>