<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		>

	<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:padding="20dp"
			app:layout_constraintHorizontal_bias="0.0">

		<TextView
				android:id="@+id/toolbar_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/app_name"
				android:textColor="@color/green"
				android:textSize="20sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		<Button
				android:id="@+id/join_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/custom_button"
				android:text="@string/join_now"
				android:textColor="@android:color/white"
				android:paddingHorizontal="20dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintRight_toRightOf="@id/toolbar_title"
				app:layout_constraintTop_toTopOf="parent"
				android:visibility="visible"/>

		<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent">

			<Button
					android:id="@+id/post_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/custom_button"
					android:text="@string/post"
					android:textColor="@android:color/white"
					android:visibility="invisible" />

			<ImageView
					android:id="@+id/profile_btn"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:background="@drawable/full_rounded"
					android:layout_marginStart="34dp"
					android:visibility="invisible"
					android:contentDescription="@string/avatar_desc" />
		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<!-- include your activity_main.xml here  -->

	<!--<include layout="@layout/activity_main" />-->

</androidx.constraintlayout.widget.ConstraintLayout>