<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".NewPostActivity">

	<androidx.fragment.app.FragmentContainerView
			android:name="com.frite.creativevues.fragment.HeaderFragment"
			android:id="@+id/header_fragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout="@layout/fragment_header"/>

	<LinearLayout
			android:layout_width="400dp"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@+id/header_fragment"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:paddingHorizontal="20dp"
			android:paddingVertical="30dp"
			android:layout_marginTop="96dp"
			android:background="@android:color/white">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="25sp"
				android:textColor="@android:color/black"
				android:text="@string/post_title"
				android:textAlignment="center"/>

		<EditText
				android:id="@+id/post_textarea"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:background="@drawable/textarea_rounded"
				android:hint="@string/tell_us"
				android:padding="15dp"
				android:textColorHint="@android:color/white"
				android:layout_marginVertical="10dp"
				android:inputType="textShortMessage" />

		<Button
				android:id="@+id/submit_post_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/custom_button"
				android:text="@string/submit"
				android:textColor="@android:color/white"
				android:paddingHorizontal="20dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>